# silicon-empire

./: .env.example  .gitignore  Dockerfile  Dockerfile.rpa  docker-compose.prod.yml  docker-compose.yml  mcp_config.json  pyproject.toml
db/migrations/: 001_decisions.sql  002_tool_registry.sql  003_interactions.sql  004_products.sql  005_suppliers.sql  006_policies.sql  007_agent_memories.sql  008_vector_search_rpc.sql  009_evolution.sql  010_knowledge_and_scheduler.sql  011_outcomes_and_autonomy.sql
docs/: architecture.md  database_schema.md  development_roadmap.md  meeting_mechanisms.md  ops_runbook.md  skills_and_mcp.md
scripts/: deploy.sh  get_chat_id.py  register_bots.py  smoke_test.py  test_feishu.py
src/: main.py
src/agents/: __init__.py  base.py  l1_gm.py  l2_cgo.py  l2_coo.py  l2_cro.py  l2_cto.py
src/config/: __init__.py  models.py  settings.py
src/core/: __init__.py  agent_bus.py  autonomy_manager.py  bus.py  capability_score.py  cost_tracker.py  envelope.py  guards.py  hooks.py  knowledge_base.py  memory.py  memory_distiller.py  outcome_tracker.py  persistence.py  personal_memory.py  scheduler.py  state.py
src/graphs/: __init__.py  adversarial_hearing.py  async_session.py  direct_chat.py  evolution.py  exploration.py  holiday_chat.py  main_router.py  self_heal.py
src/integrations/: __init__.py  feishu_client.py  feishu_webhook.py  n8n_bridge.py
src/mcp_servers/: feishu_server.py  filesystem_server.py  gmail_server.py  playwright_server.py  redis_server.py  shopify_server.py  supabase_server.py
src/prompts/: cgo.md  coo.md  cro.md  cto.md  gm.md  l3_architect.md  l3_copy_master.md  (+6 more)
(+14 files in other folders)
